# lfa

./: CMakeLists.txt
include/lfa/: execute.h  other.h  tools.h
resources/: program2.txt  program3.txt  test.txt
sources/: execute.cpp  main.cpp  proiect1.cpp
